[package]
name = "derivers"
version = "0.1.0"
authors = ["Erik Price <github@erikprice.net>"]

[dependencies]
serde = "1.0.24"
serde_derive = "1.0.24"
docopt = "0.8.1"
image = "0.18.0"
imageproc = "*"
rusttype = "*"
gpx = "0.1.0"
geo = "0.4.13"
rayon = "0.9.0"

# TODO: Eventually, this is much faster than the xml-rs code gpx uses
# quick-xml = "0.10.1"
time = "*"

