[package]
name = "derivers"
version = "0.1.0"
authors = ["Erik Price <github@erikprice.net>"]

[dependencies]
chrono = "0.4.0"
docopt = "0.8.3"
geo = "0.4.13"
gpx = "0.1.0"
image = "0.18.0"
imageproc = "0.13.0"
lazy_static = "1.0"
libc = "0.2.35"
palette = "0.2.1"
rayon = "0.9.0"
rusttype = "0.2.1"
serde = "1.0.24"
serde_derive = "1.0.24"

# TODO: Eventually, this is much faster than the xml-rs code gpx uses
# quick-xml = "0.10.1"

